fix(App): fix some problems

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <meta property="og:title" content="Myhome, ahová jó megérkezni!">
+    <meta property="og:image" content="https://myhomeimmo.hu/images/logomegoszt2.png">
     <link rel="icon" href="/images/logo.jpg" />
     <link rel="stylesheet" href="/styles/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
